tests/snapshots/valid_samples__valid_samples__basic_main.snap
---
source: tests/valid_samples.rs
expression: output
---
; ModuleID = 'main'
source_filename = "main"

define i64 @main() {
entry:
  ret i64 0
}

