tests/snapshots/valid_samples__valid_samples__nested_loop.snap
---
source: tests/valid_samples.rs
expression: output
---
; ModuleID = 'main'
source_filename = "main"

; Function Attrs: nocallback nofree nosync nounwind willreturn
declare ptr @llvm.stacksave() #0

; Function Attrs: nocallback nofree nosync nounwind willreturn
declare void @llvm.stackrestore(ptr) #0

define i64 @main() {
entry:
  %0 = call ptr @llvm.stacksave()
  %1 = alloca i64, align 8
  store i64 0, ptr %1, align 4
  br label %loop

loop:                                             ; preds = %endloop1, %entry
  %2 = call ptr @llvm.stacksave()
  %3 = load i64, ptr %1, align 4
  %4 = icmp eq i64 %3, 10
  br i1 %4, label %then, label %otherwise

then:                                             ; preds = %loop
  %5 = call ptr @llvm.stacksave()
  call void @llvm.stackrestore(ptr %2)
  br label %endloop

otherwise:                                        ; preds = %loop
  br label %endif

endif:                                            ; preds = %otherwise
  %6 = alloca i64, align 8
  store i64 0, ptr %6, align 4
  br label %loop2

loop2:                                            ; preds = %endif3, %endif
  %7 = call ptr @llvm.stacksave()
  %8 = load i64, ptr %6, align 4
  %9 = icmp eq i64 %8, 10
  br i1 %9, label %then5, label %otherwise4

then5:                                            ; preds = %loop2
  %10 = call ptr @llvm.stacksave()
  call void @llvm.stackrestore(ptr %7)
  br label %endloop1

otherwise4:                                       ; preds = %loop2
  br label %endif3

endif3:                                           ; preds = %otherwise4
  %11 = load i64, ptr %6, align 4
  %12 = add i64 %11, 1
  store i64 %12, ptr %6, align 4
  call void @llvm.stackrestore(ptr %7)
  br label %loop2

endloop1:                                         ; preds = %then5
  %13 = load i64, ptr %1, align 4
  %14 = add i64 %13, 1
  store i64 %14, ptr %1, align 4
  call void @llvm.stackrestore(ptr %2)
  br label %loop

endloop:                                          ; preds = %then
  call void @llvm.stackrestore(ptr %0)
  ret i64 0
}

attributes #0 = { nocallback nofree nosync nounwind willreturn }

